--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,10 +71,11 @@ const pageTitle = "Trevor Lee | Homepage";
       }
     </ul>
     <div class="flex justify-end pb-8 pt-2">
-      <a
-        href="/posts"
-        class="group flex items-center gap-1 py-1 font-mono text-sm text-gray-9 no-underline hover:text-gray-10 focus:text-gray-10"
-        >view older posts <Icon name="arrow-right" /></a
+      <a href="/posts" class="link group flex items-center gap-1 py-1"
+        >view older posts <Icon
+          class="text-text group-hover:text-primary group-focus-visible:text-primary"
+          name="arrow-right"
+        /></a
       >
     </div>
   </section>
