--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -38,13 +38,13 @@ const { Content } = await post.render();
       </h1>
       {
         post.data.date && (
-          <span class="font-mono text-sm lowercase text-gray-8">
-            posted {formatDate(post.data.date, "long")}
+          <span class="text-textVariant text-sm">
+            Posted {formatDate(post.data.date, "long")}
           </span>
         )
       }
     </div>
-    <div id="content" class="prose mx-auto mb-12 mt-8 text-foreground">
+    <div id="content" class="text-text prose mx-auto mb-12 mt-8">
       <Content />
     </div>
     <div class="pb-4">
@@ -61,8 +61,8 @@ const { Content } = await post.render();
   #content {
     --tw-prose-links: hsl(var(--blue-7));
     --tw-prose-code: hsl(var(--green-7));
-    --tw-prose-headings: hsl(var(--gray-10));
-    --tw-prose-quotes: hsl(var(--gray-10));
-    --tw-prose-bold: hsl(var(--gray-10));
+    --tw-prose-headings: hsl(var(--text));
+    --tw-prose-quotes: hsl(var(--text));
+    --tw-prose-bold: hsl(var(--text));
   }
 </style>
