--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -7,7 +7,7 @@ const { href, title, description, src, online } = Astro.props;
 
 <li class="relative">
   <a
-    class="text-text ring-backgroundVariant hover:bg-backgroundVariant/80 focus-visible:bg-backgroundVariant/80 group block h-full w-full overflow-hidden rounded-2xl ring-2 hover:ring-primary focus-visible:ring-primary"
+    class="group block h-full w-full overflow-hidden rounded-2xl text-text ring-2 ring-backgroundVariant hover:bg-backgroundVariant/80 hover:ring-primary focus-visible:bg-backgroundVariant/80 focus-visible:ring-primary"
     href={href}
     ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
       ><div class="overflow-hidden rounded-t-2xl">
@@ -15,7 +15,7 @@ const { href, title, description, src, online } = Astro.props;
           alt={title}
           width="640"
           height="480"
-          class="ring-backgroundVariant h-full rounded-lg rounded-t-2xl object-cover ring-2 transition-transform delay-75 duration-500 ease-in-out group-hover:scale-105 group-focus-visible:scale-105"
+          class="h-full rounded-lg rounded-t-2xl object-cover ring-2 ring-backgroundVariant transition-transform delay-75 duration-500 ease-in-out group-hover:scale-105 group-focus-visible:scale-105"
           src={src}
           loading="eager"
           quality={"low"}
@@ -25,7 +25,7 @@ const { href, title, description, src, online } = Astro.props;
     ><h3 class="block px-3.5 pt-5 text-lg font-bold">
       {title}
     </h3><p
-      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-gray-9"
+      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-textVariant"
     >
       {description}
     </p><span class="block pb-4">
@@ -33,12 +33,12 @@ const { href, title, description, src, online } = Astro.props;
         online ? (
           <div class="absolute bottom-3 right-5 flex items-center gap-1">
             <div class="h-[8px] w-[8px] rounded-full bg-green-7" />
-            <span class="font-mono text-xs text-gray-9">online</span>
+            <span class="font-mono text-xs text-textVariant">online</span>
           </div>
         ) : (
           <div class="absolute bottom-3 right-5 flex items-center gap-1">
             <div class="h-[8px] w-[8px] rounded-full bg-red-7" />
-            <span class="font-mono text-xs text-gray-9">offline</span>
+            <span class="font-mono text-xs text-textVariant">offline</span>
           </div>
         )
       }
