--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -117,99 +117,11 @@
   }
 
   .dark {
-    --gray-1: 210deg 0% 10%;
-    --gray-2: 300deg 0% 12%;
-    --gray-3: 180deg 0% 16%;
-    --gray-4: 300deg 0% 18%;
-    --gray-5: 240deg 0% 27%;
-    --gray-6: 0deg 0% 52%;
-    --gray-7: 240deg 0% 56%;
-    --gray-8: 300deg 0% 49%;
-    --gray-9: 0deg 0% 63%;
-    --gray-10: 0deg 0% 92%;
-
-    --blue-1: 212.39deg 51.896% 11.849%;
-    --blue-2: 214.97deg 59.165% 15.102%;
-    --blue-3: 213.11deg 69.471% 20.099%;
-    --blue-4: 211.47deg 77.59% 23.017%;
-    --blue-5: 211.95deg 81.737% 27.792%;
-    --blue-6: 205.88deg 100% 49.948%;
-    --blue-7: 212.51deg 98.698% 48.654%;
-    --blue-8: 212.2deg 98.594% 41.207%;
-    --blue-9: 210.64deg 100% 66.49%;
-    --blue-10: 206.15deg 95.963% 96.082%;
-
-    --red-10: 357.99deg 85.08% 96.027%;
-    --red-9: 358.27deg 99.187% 68.912%;
-    --red-8: 358.19deg 75.541% 59.201%;
-    --red-7: 357.61deg 70.229% 52.03%;
-    --red-6: 358.09deg 64.397% 42.18%;
-    --red-5: 358.09deg 59.397% 32.18%;
-    --red-4: 354.84deg 54.352% 22.073%;
-    --red-3: 354.83deg 47.982% 15.903%;
-    --red-2: 354.83deg 40.982% 12.903%;
-    --red-1: 354.33deg 35.707% 10.99%;
-
-    --yellow-1: 35.03deg 100% 8.1751%;
-    --yellow-2: 31.949deg 99.78% 9.9478%;
-    --yellow-3: 32.389deg 100% 15.024%;
-    --yellow-4: 34.655deg 99.229% 17.156%;
-    --yellow-5: 35.586deg 94.083% 21.794%;
-    --yellow-6: 37.58deg 90.804% 32.953%;
-    --yellow-7: 37.883deg 87.424% 48.027%;
-    --yellow-8: 38.53deg 100% 56.961%;
-    --yellow-9: 35.498deg 100% 51.252%;
-    --yellow-10: 39.016deg 97.095% 93.337%;
-
-    --green-1: 139.7deg 50.059% 8.5979%;
-    --green-2: 135.58deg 47.45% 12.021%;
-    --green-3: 133.49deg 50.607% 14.183%;
-    --green-4: 136.05deg 71.939% 15.74%;
-    --green-5: 134.5deg 69.316% 23.117%;
-    --green-6: 134.61deg 70.693% 33.783%;
-    --green-7: 130.08deg 39.997% 46.182%;
-    --green-8: 131.76deg 42.385% 39.223%;
-    --green-9: 131.98deg 42.965% 56.729%;
-    --green-10: 130.36deg 74.397% 94.238%;
-
-    --cyan-10: 165.86deg 73.159% 92.915%;
-    --cyan-9: 173.68deg 92.972% 40.463%;
-    --cyan-8: 172.28deg 81.184% 30.294%;
-    --cyan-7: 172.67deg 77.43% 36.336%;
-    --cyan-6: 171.4deg 82.133% 32.562%;
-    --cyan-5: 172.57deg 76.395% 20.903%;
-    --cyan-4: 170.84deg 84.114% 13.087%;
-    --cyan-3: 171.49deg 81.686% 12.596%;
-    --cyan-2: 171.5deg 79.558% 8.7319%;
-    --cyan-1: 167.49deg 78.082% 7.2386%;
-
-    --purple-1: 284.84deg 31.579% 11.846%;
-    --purple-2: 281.43deg 37.961% 15.67%;
-    --purple-3: 280.53deg 43.568% 22.885%;
-    --purple-4: 275.83deg 44.973% 28.479%;
-    --purple-5: 274.73deg 48.661% 35.069%;
-    --purple-6: 272.25deg 52.354% 54.108%;
-    --purple-7: 271.47deg 46.649% 45.382%;
-    --purple-8: 272.13deg 66.246% 50.312%;
-    --purple-9: 274.86deg 70.073% 71.276%;
-    --purple-10: 283.25deg 68.715% 95.868%;
-
-    --pink-10: 329.96deg 76.01% 95.792%;
-    --pink-9: 335.33deg 84.412% 82.176%;
-    --pink-8: 341.33deg 91.742% 67.366%;
-    --pink-7: 335.46deg 74.637% 51.008%;
-    --pink-6: 336.38deg 74.76% 40.52%;
-    --pink-5: 335.48deg 57.339% 27.292%;
-    --pink-4: 333.33deg 52.401% 21.815%;
-    --pink-3: 335.05deg 50.355% 20.698%;
-    --pink-2: 333.88deg 42.559% 15.888%;
-    --pink-1: 332.58deg 29.836% 12.16%;
-
     --backdrop: 0deg 0% 0%;
-    --background: var(--gray-1);
-    --background-variant: var(--gray-2);
-    --text: var(--gray-10);
-    --text-variant: var(--gray-9);
+    --background: var(--gray-10);
+    --background-variant: var(--gray-10);
+    --text: var(--gray-1);
+    --text-variant: var(--gray-7);
     --primary: var(--blue-7);
     --primary-variant: var(--red-7);
     --secondary: var(--yellow-6);
@@ -227,6 +139,32 @@
     --astro-code-token-string-expression: #5bd1b9;
     --astro-code-token-punctuation: #efefef;
     --astro-code-token-link: #f4457d;
+  }
+
+  .ube {
+    --backdrop: var(--purple-1);
+    --background: var(--gray-1);
+    --background-variant: var(--gray-2);
+    --text: var(--gray-10);
+    --text-variant: var(--gray-9);
+    --primary: var(--blue-7);
+    --primary-variant: var(--red-7);
+    --secondary: var(--yellow-6);
+    --secondary-variant: var(--yellow-7);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .ube {
+      --backdrop: var(--purple-10);
+      --background: var(--purple-6);
+      --background-variant: var(--gray-2);
+      --text: var(--gray-10);
+      --text-variant: var(--gray-9);
+      --primary: var(--blue-7);
+      --primary-variant: var(--red-7);
+      --secondary: var(--yellow-6);
+      --secondary-variant: var(--yellow-7);
+    }
   }
 }
 
