spacing and styles

--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -2,8 +2,8 @@
 const { category, pageSlug, pageTitle } = Astro.props;
 ---
 
-<ul class="flex">
-  <li><a href="/">~</a></li>
-  {category === 'posts' && <li>&nbsp;/&nbsp;<a href=`/${category}`>Posts</a></li>}
+<ul class="link flex">
+  <li><a href="/" class="no-underline text-blue-7 hover:text-primary focus-visible:text-primary">Home</a></li>
+  {category === 'posts' && <li>&nbsp;/&nbsp;<a href=`/${category}` class="no-underline text-blue-7 hover:text-primary focus-visible:text-primary">Posts</a></li>}
   {pageSlug && <li>&nbsp;/&nbsp;{pageTitle}</li>}
 </ul>
