--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,13 +5,13 @@ const buildTime = new Date().toISOString();
 ---
 
 <footer
-  class="flex flex-col items-baseline justify-between gap-3 pb-4 pt-16 sm:flex-row sm:gap-20"
+  class="flex flex-col items-baseline justify-between gap-3 pb-4 pt-24 sm:flex-row sm:gap-20"
 >
   <details
     class="relative w-full cursor-default rounded-xl px-2 py-2 ring-2 ring-gray-10/10"
   >
     <summary class="cursor-pointer"
-      >Contact <span class="text-textVariant font-mono text-sm"
+      >Contact <span class="font-mono text-sm text-textVariant"
         >(click for details)</span
       ></summary
     >
@@ -31,8 +31,6 @@ const buildTime = new Date().toISOString();
         >Github:&nbsp;<a
           href="https://github.com/trevortylerlee"
           class="link group flex items-center gap-1"
-          target="_blank"
-          rel="noopener noreferrer"
           >@trevortylerlee
           <Icon
             class="text-text group-hover:text-primary group-focus-visible:text-primary"
@@ -44,8 +42,6 @@ const buildTime = new Date().toISOString();
         >LinkedIn:&nbsp;<a
           href="https://www.linkedin.com/in/trevortylerlee/"
           class="link group flex items-center gap-1 pb-6"
-          target="_blank"
-          rel="noopener noreferrer"
           >@trevortylerlee
           <Icon
             class="text-text group-hover:text-primary group-focus-visible:text-primary"
