--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,6 +24,7 @@ const buildTime = new Date().toISOString();
           <Icon
             class="text-text group-hover:text-primary group-focus-visible:text-primary"
             name="external"
+            aria-label="External link icon"
           /></a
         ></span
       >
@@ -46,6 +47,7 @@ const buildTime = new Date().toISOString();
           <Icon
             class="text-text group-hover:text-primary group-focus-visible:text-primary"
             name="external"
+            aria-label="External link icon"
           /></a
         ></span
       >
@@ -66,6 +68,7 @@ const buildTime = new Date().toISOString();
       <Icon
         class="text-text group-hover:text-primary group-focus-visible:text-primary"
         name="external"
+        aria-label="External link icon"
       />
     </a>
   </div>
