--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -21,7 +21,7 @@ const { type = "info" } = Astro.props;
   .note {
     border-radius: 1px;
     background: rgb(var(--background));
-    outline: 1.5px solid hsl(var(--gray-4));
+    outline: 1.5px solid rgb(var(--gray-4));
   }
 
   .dark .note {
@@ -29,26 +29,26 @@ const { type = "info" } = Astro.props;
   }
 
   .question {
-    color: hsl(var(--gray-10));
-    background: hsl(var(--gray-2));
+    color: rgb(var(--gray-10));
+    background: rgb(var(--gray-2));
   }
 
   .device-alternate {
-    color: hsl(var(--blue-9));
-    background: hsl(var(--blue-2));
-    outline: 1.5px solid hsl(var(--blue-4));
+    color: rgb(var(--blue-9));
+    background: rgb(var(--blue-2));
+    outline: 1.5px solid rgb(var(--blue-4));
   }
 
   .warning {
-    color: hsl(var(--yellow-9));
-    background: hsl(var(--yellow-2));
-    outline: 1.5px solid hsl(var(--yellow-4));
+    color: rgb(var(--yellow-9));
+    background: rgb(var(--yellow-2));
+    outline: 1.5px solid rgb(var(--yellow-4));
   }
 
   .stop {
-    color: hsl(var(--red-9));
-    background: hsl(var(--red-2));
-    outline: 1.5px solid hsl(var(--red-4));
+    color: rgb(var(--red-9));
+    background: rgb(var(--red-2));
+    outline: 1.5px solid rgb(var(--red-4));
   }
 
   .icon {
