--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ const pageTitle = "Trevor Lee | Homepage";
   </div>
   <section>
     <span class="py-2 font-mono text-sm text-textVariant">
-      <h2 class="">latest posts</h2>
+      <h2 class="py-2">latest posts</h2>
     </span>
     <ul>
       {
@@ -102,10 +102,10 @@ const pageTitle = "Trevor Lee | Homepage";
         ))
       }
     </ul>
-    <div class="flex justify-end pb-8 pt-2">
-      <a href="/posts" class="link group flex items-center gap-1 py-1"
+    <div class="flex justify-end pb-8">
+      <a href="/posts" class="link group flex items-center gap-1 py-2"
         >view older posts <Icon
-          class="group-hover:animate-horizontal-bounce group-focus:animate-horizontal-bounce text-text group-hover:text-primary group-focus-visible:text-primary"
+          class="text-text group-hover:animate-horizontal-bounce group-hover:text-primary group-focus:animate-horizontal-bounce group-focus-visible:text-primary"
           name="arrow-right"
         /></a
       >
