--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,100 +4,168 @@
 
 @layer base {
   :root {
-    --gray-1: 300deg 0% 94.902%;
-    --gray-2: 330deg 0% 92.157%;
-    --gray-3: 300deg 0% 90.196%;
-    --gray-4: 0deg 0% 84.314%;
-    --gray-5: 180deg 0% 78.824%;
-    --gray-6: 0deg 0% 65.882%;
-    --gray-7: 240deg 0% 56.078%;
-    --gray-8: 300deg 0% 49.02%;
-    --gray-9: 240deg 0% 40%;
-    --gray-10: 330deg 0% 9.0196%;
+    --red-1: 255 242 241;
+    --red-2: 255 226 224;
+    --red-3: 255 200 197;
+    --red-4: 255 163 157;
+    --red-5: 255 110 101;
+    --red-6: 254 69 58;
+    --red-7: 236 34 22;
+    --red-8: 199 24 14;
+    --red-9: 164 24 16;
+    --red-10: 136 27 20;
+    --red-11: 74 9 5;
 
-    --blue-1: 210.19deg 100% 96.938%;
-    --blue-2: 208.03deg 96.714% 95.901%;
-    --blue-3: 206.82deg 93.513% 93.62%;
-    --blue-4: 208.69deg 98.376% 89.926%;
-    --blue-5: 209.65deg 99.862% 80.341%;
-    --blue-6: 207.85deg 100% 65.859%;
-    --blue-7: 212.32deg 99.054% 48.364%;
-    --blue-8: 211.98deg 100% 40.93%;
-    --blue-9: 211.85deg 96.847% 42.786%;
-    --blue-10: 210.87deg 100% 15.126%;
+    --orange-1: 255 252 234;
+    --orange-2: 255 243 197;
+    --orange-3: 255 231 133;
+    --orange-4: 255 212 70;
+    --orange-5: 255 191 27;
+    --orange-6: 255 159 9;
+    --orange-7: 226 116 0;
+    --orange-8: 187 79 2;
+    --orange-9: 152 60 8;
+    --orange-10: 124 50 11;
+    --orange-11: 72 24 0;
 
-    --red-1: 6.8306deg 87.798% 96.604%;
-    --red-2: 357.97deg 89.345% 95.678%;
-    --red-3: 0.4734deg 100% 95.158%;
-    --red-4: 1.403deg 90.534% 91.865%;
-    --red-5: 0.8253deg 79.64% 84.515%;
-    --red-6: 359.19deg 88.969% 70.874%;
-    --red-7: 358.19deg 75.541% 59.201%;
-    --red-8: 357.61deg 70.229% 52.03%;
-    --red-9: 358.26deg 65.68% 47.953%;
-    --red-10: 356.62deg 47.226% 15.126%;
+    --yellow-1: 254 253 232;
+    --yellow-2: 255 252 194;
+    --yellow-3: 255 246 135;
+    --yellow-4: 255 233 67;
+    --yellow-5: 255 214 12;
+    --yellow-6: 239 190 3;
+    --yellow-7: 206 147 0;
+    --yellow-8: 164 104 4;
+    --yellow-9: 136 81 11;
+    --yellow-10: 115 66 16;
+    --yellow-11: 67 34 5;
 
-    --yellow-1: 40.955deg 100% 95.073%;
-    --yellow-2: 45.522deg 100% 91.972%;
-    --yellow-3: 42.824deg 99.413% 89.85%;
-    --yellow-4: 41.999deg 93.489% 76.733%;
-    --yellow-5: 38.147deg 99.472% 70.939%;
-    --yellow-6: 35.894deg 89.902% 62.336%;
-    --yellow-7: 38.53deg 100% 56.961%;
-    --yellow-8: 35.498deg 100% 51.252%;
-    --yellow-9: 29.802deg 98.184% 32.183%;
-    --yellow-10: 19.679deg 77.395% 17.186%;
+    --green-1: 240 253 241;
+    --green-2: 220 252 224;
+    --green-3: 187 247 196;
+    --green-4: 135 238 151;
+    --green-5: 50 216 76;
+    --green-6: 35 196 60;
+    --green-7: 23 162 45;
+    --green-8: 22 127 39;
+    --green-9: 23 100 36;
+    --green-10: 21 82 32;
+    --green-11: 5 46 13;
 
-    --green-1: 137.2deg 59.788% 95.814%;
-    --green-2: 127.34deg 60.219% 94.976%;
-    --green-3: 117.84deg 58.799% 91.016%;
-    --green-4: 120.26deg 60.504% 86.466%;
-    --green-5: 124.96deg 61.028% 74.721%;
-    --green-6: 124.56deg 59.498% 63.98%;
-    --green-7: 130.08deg 39.997% 46.182%;
-    --green-8: 131.76deg 42.385% 39.223%;
-    --green-9: 130.66deg 47.802% 32.395%;
-    --green-10: 126.6deg 30.315% 14.771%;
+    --mint-1: 242 251 250;
+    --mint-2: 210 245 241;
+    --mint-3: 166 233 228;
+    --mint-4: 102 212 208;
+    --mint-5: 68 189 189;
+    --mint-6: 42 161 162;
+    --mint-7: 31 127 130;
+    --mint-8: 29 101 104;
+    --mint-9: 27 81 84;
+    --mint-10: 27 68 70;
+    --mint-11: 10 38 41;
 
-    --cyan-1: 172.9deg 58.224% 95.802%;
-    --cyan-2: 168.42deg 66.148% 94.054%;
-    --cyan-3: 167.94deg 74.679% 90.049%;
-    --cyan-4: 170.01deg 71.575% 85.008%;
-    --cyan-5: 170.14deg 70.899% 72.248%;
-    --cyan-6: 169.52deg 70.119% 57.115%;
-    --cyan-7: 172.67deg 77.43% 36.336%;
-    --cyan-8: 172.28deg 81.184% 30.294%;
-    --cyan-9: 173.47deg 91.512% 24.9%;
-    --cyan-10: 171.44deg 78.506% 13.042%;
+    --teal-1: 239 250 252;
+    --teal-2: 215 241 246;
+    --teal-3: 179 226 238;
+    --teal-4: 107 196 220;
+    --teal-5: 68 173 204;
+    --teal-6: 40 145 178;
+    --teal-7: 36 117 150;
+    --teal-8: 36 96 122;
+    --teal-9: 37 80 101;
+    --teal-10: 35 67 86;
+    --teal-11: 18 43 58;
 
-    --purple-1: 275.76deg 95.239% 97.26%;
-    --purple-2: 282.27deg 69.415% 96.855%;
-    --purple-3: 277.67deg 69.85% 94.702%;
-    --purple-4: 275.75deg 71.987% 92.147%;
-    --purple-5: 274.04deg 70.515% 82.432%;
-    --purple-6: 272.56deg 72.174% 73.137%;
-    --purple-7: 272.25deg 52.354% 54.108%;
-    --purple-8: 271.47deg 46.649% 45.382%;
-    --purple-9: 273.85deg 70.552% 43.351%;
-    --purple-10: 275.16deg 100% 15.254%;
+    --cyan-1: 240 249 255;
+    --cyan-2: 225 243 253;
+    --cyan-3: 188 230 251;
+    --cyan-4: 128 213 249;
+    --cyan-5: 90 201 245;
+    --cyan-6: 19 168 228;
+    --cyan-7: 7 134 194;
+    --cyan-8: 7 108 157;
+    --cyan-9: 10 91 130;
+    --cyan-10: 14 75 108;
+    --cyan-11: 10 48 71;
 
-    --pink-1: 325.51deg 99.799% 96.047%;
-    --pink-2: 340.49deg 97.232% 96.234%;
-    --pink-3: 334.38deg 78.686% 93.78%;
-    --pink-4: 340.31deg 72.73% 90.972%;
-    --pink-5: 339.98deg 72.513% 83.999%;
-    --pink-6: 341.77deg 74.927% 73.098%;
-    --pink-7: 335.99deg 81.711% 58.327%;
-    --pink-8: 335.46deg 74.637% 51.008%;
-    --pink-9: 335.32deg 64.983% 44.893%;
-    --pink-10: 334.53deg 70.181% 15.445%;
+    --blue-1: 237 249 255;
+    --blue-2: 215 240 255;
+    --blue-3: 185 231 255;
+    --blue-4: 136 217 255;
+    --blue-5: 80 194 255;
+    --blue-6: 40 163 255;
+    --blue-7: 13 132 255;
+    --blue-8: 10 109 235;
+    --blue-9: 15 87 190;
+    --blue-10: 19 76 149;
+    --blue-11: 17 47 90;
+
+    --indigo-1: 239 242 254;
+    --indigo-2: 226 231 253;
+    --indigo-3: 202 210 251;
+    --indigo-4: 170 180 247;
+    --indigo-5: 136 141 241;
+    --indigo-6: 95 92 230;
+    --indigo-7: 94 80 219;
+    --indigo-8: 80 65 193;
+    --indigo-9: 65 55 156;
+    --indigo-10: 57 51 124;
+    --indigo-11: 35 30 72;
+
+    --purple-1: 251 244 255;
+    --purple-2: 245 232 255;
+    --purple-3: 235 208 254;
+    --purple-4: 223 170 253;
+    --purple-5: 206 120 250;
+    --purple-6: 191 91 242;
+    --purple-7: 157 37 212;
+    --purple-8: 132 27 176;
+    --purple-9: 110 24 144;
+    --purple-10: 94 25 118;
+    --purple-11: 58 3 79;
+
+    --brown-1: 246 245 240;
+    --brown-2: 233 228 216;
+    --brown-3: 213 201 179;
+    --brown-4: 189 168 135;
+    --brown-5: 172 142 105;
+    --brown-6: 155 121 87;
+    --brown-7: 133 99 73;
+    --brown-8: 107 77 61;
+    --brown-9: 91 66 56;
+    --brown-10: 80 58 51;
+    --brown-11: 45 31 27;
+
+    --gray-1: 246 246 247;
+    --gray-2: 239 239 240;
+    --gray-3: 226 226 227;
+    --gray-4: 207 208 210;
+    --gray-5: 187 187 190;
+    --gray-6: 168 168 172;
+    --gray-7: 152 152 157;
+    --gray-8: 127 127 131;
+    --gray-9: 104 104 107;
+    --gray-10: 86 86 89;
+    --gray-11: 50 50 52;
+
+    --pink-1: 255 240 241;
+    --pink-2: 255 226 230;
+    --pink-3: 255 202 210;
+    --pink-4: 255 159 173;
+    --pink-5: 255 105 131;
+    --pink-6: 255 56 95;
+    --pink-7: 237 17 70;
+    --pink-8: 200 8 60;
+    --pink-9: 168 9 57;
+    --pink-10: 143 12 55;
+    --pink-11: 80 1 25;
   }
 
   .light {
-    --backdrop: 360deg 100% 100%;
+    --backdrop: 250 250 250;
     --background: var(--gray-1);
-    --background-variant: var(--gray-2);
-    --text: var(--gray-10);
+    --background-variant: var(--gray-4);
+    --text: var(--gray-11);
     --text-variant: var(--gray-9);
     --primary: var(--blue-7);
     --primary-variant: var(--blue-7);
@@ -105,27 +173,27 @@
     --secondary-variant: var(--yellow-7);
 
     /* shiki config */
-    --astro-code-color-text: hsl(var(--gray-10));
-    --astro-code-color-background: hsl(var(--gray-2));
-    --astro-code-token-constant: hsl(var(--orange-7));
-    --astro-code-token-string: hsl(var(--green-7));
-    --astro-code-token-comment: hsl(var(--gray-6));
-    --astro-code-token-keyword: hsl(var(--pink-7));
-    --astro-code-token-parameter: hsl(var(--blue-7));
-    --astro-code-token-function: hsl(var(--yellow-8));
-    --astro-code-token-string-expression: hsl(var(--green-7));
-    --astro-code-token-punctuation: hsl(var(--gray-5));
-    --astro-code-token-link: hsl(var(--pink-7));
+    --astro-code-color-text: rgb(var(--gray-10));
+    --astro-code-color-background: rgb(var(--gray-2));
+    --astro-code-token-constant: rgb(var(--orange-7));
+    --astro-code-token-string: rgb(var(--green-7));
+    --astro-code-token-comment: rgb(var(--gray-6));
+    --astro-code-token-keyword: rgb(var(--pink-7));
+    --astro-code-token-parameter: rgb(var(--blue-7));
+    --astro-code-token-function: rgb(var(--yellow-8));
+    --astro-code-token-string-expression: rgb(var(--green-7));
+    --astro-code-token-punctuation: rgb(var(--gray-5));
+    --astro-code-token-link: rgb(var(--pink-7));
   }
 
   .dark {
     color-scheme: dark;
 
-    --backdrop: 0deg 0% 0%;
-    --background: var(--gray-10);
+    --backdrop: 0 0 0;
+    --background: var(--gray-11);
     --background-variant: var(--gray-10);
     --text: var(--gray-1);
-    --text-variant: var(--gray-7);
+    --text-variant: var(--gray-6);
     --primary: var(--blue-7);
     --primary-variant: var(--red-7);
     --secondary: var(--yellow-6);
@@ -150,8 +218,8 @@
       --backdrop: var(--purple-1);
       --background: var(--gray-1);
       --background-variant: var(--purple-3);
-      --text: var(--gray-10);
-      --text-variant: var(--gray-9);
+      --text: var(--gray-11);
+      --text-variant: var(--gray-10);
       --primary: var(--purple-8);
       --primary-variant: var(--red-7);
       --secondary: var(--yellow-6);
@@ -161,12 +229,12 @@
 
   @media (prefers-color-scheme: dark) {
     .ube {
-      --backdrop: var(--purple-10);
+      --backdrop: 7 4 22;
       --background: var(--purple-6);
-      --background-variant: var(--gray-2);
+      --background-variant: var(--purple-9);
       --text: var(--gray-1);
       --text-variant: var(--gray-2);
-      --primary: var(--purple-3);
+      --primary: var(--purple-6);
       --primary-variant: var(--red-7);
       --secondary: var(--yellow-6);
       --secondary-variant: var(--yellow-7);
@@ -175,10 +243,10 @@
 }
 
 .link {
-  color: hsl(var(--blue-7));
+  color: rgb(var(--blue-7));
 }
 
 .link:hover,
 .link:focus-visible {
-  color: hsl(var(--primary));
+  color: rgb(var(--primary));
 }
