--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -38,13 +38,13 @@ const { Content } = await post.render();
       </h1>
       {
         post.data.date && (
-          <span class="text-textVariant text-sm">
+          <span class="text-sm text-textVariant">
             Posted {formatDate(post.data.date, "long")}
           </span>
         )
       }
     </div>
-    <div id="content" class="text-text prose mx-auto mb-12 mt-8">
+    <div id="content" class="prose mx-auto mb-12 mt-8 text-text">
       <Content />
     </div>
     <div class="pb-4">
@@ -59,10 +59,10 @@ const { Content } = await post.render();
   }
 
   #content {
-    --tw-prose-links: hsl(var(--blue-7));
-    --tw-prose-code: hsl(var(--green-7));
-    --tw-prose-headings: hsl(var(--text));
-    --tw-prose-quotes: hsl(var(--text));
-    --tw-prose-bold: hsl(var(--text));
+    --tw-prose-links: rgb(var(--blue-7));
+    --tw-prose-code: rgb(var(--green-7));
+    --tw-prose-headings: rgb(var(--text));
+    --tw-prose-quotes: rgb(var(--text));
+    --tw-prose-bold: rgb(var(--text));
   }
 </style>
