--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -5,7 +5,7 @@ const { date, href, title, description, last } = Astro.props;
 
 <li class="-mx-3">
   <a
-    class="group flex items-center justify-between gap-2 rounded-2xl p-3 text-text no-underline ring-inset ring-primary hover:bg-backgroundVariant/40 hover:ring-1 focus:bg-backgroundVariant/40 sm:gap-3"
+    class="group flex items-center justify-between gap-2 rounded-2xl p-3 text-text no-underline ring-inset ring-primary hover:bg-backgroundVariant hover:ring-1 focus:bg-backgroundVariant sm:gap-3"
     href={`/posts/${href}`}
   >
     <span>{title}</span>
