--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -7,7 +7,7 @@ const { href, title, description, src, online } = Astro.props;
 
 <li class="relative">
   <a
-    class="group block h-full w-full overflow-hidden rounded-2xl text-text ring-2 ring-backgroundVariant hover:bg-backgroundVariant/40 hover:ring-primary focus-visible:bg-backgroundVariant/40 focus-visible:ring-primary"
+    class="group block h-full w-full overflow-hidden rounded-2xl text-text ring-2 ring-background hover:bg-backgroundVariant hover:ring-primary focus-visible:bg-backgroundVariant focus-visible:ring-primary"
     href={href}
     ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
       ><div class="overflow-hidden rounded-t-2xl">
