--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -163,8 +163,8 @@
 
   .light {
     --backdrop: 250 250 250;
-    --background: var(--gray-1);
-    --background-variant: var(--gray-4);
+    --background: var(--gray-4);
+    --background-variant: var(--blue-3);
     --text: var(--gray-11);
     --text-variant: var(--gray-9);
     --primary: var(--blue-7);
@@ -191,7 +191,7 @@
 
     --backdrop: 0 0 0;
     --background: var(--gray-11);
-    --background-variant: var(--gray-10);
+    --background-variant: var(--blue-11);
     --text: var(--gray-1);
     --text-variant: var(--gray-6);
     --primary: var(--blue-7);
@@ -216,7 +216,7 @@
   @media (prefers-color-scheme: light) {
     .ube {
       --backdrop: var(--purple-1);
-      --background: var(--gray-1);
+      --background: var(--gray-4);
       --background-variant: var(--purple-3);
       --text: var(--gray-11);
       --text-variant: var(--gray-10);
@@ -230,8 +230,8 @@
   @media (prefers-color-scheme: dark) {
     .ube {
       --backdrop: 7 4 22;
-      --background: var(--purple-6);
-      --background-variant: var(--purple-9);
+      --background: var(--gray-10);
+      --background-variant: var(--purple-11);
       --text: var(--gray-1);
       --text-variant: var(--gray-2);
       --primary: var(--purple-6);
